--- a/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
+++ b/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
@@ -1,17 +1,15 @@
-@import "../../style.less"
-
-# SoundStream: An End-to-End Neural Audio Codec
+# SoundStream
 
 <details>
 <summary>基本信息</summary>
 
 - 标题: SoundStream: An End-to-End Neural Audio Codec
 - 作者:
-  - [Neil Zeghidour](../../Authors/Neil_Zeghidour.md)
-  - [Alejandro Luebs](../../Authors/Alejandro_Luebs.md)
-  - [Ahmed Omran](../../Authors/Ahmed_Omran.md)
-  - [Jan Skoglund](../../Authors/Jan_Skoglund.md)
-  - [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
+  - 01 [Neil Zeghidour](../../Authors/Neil_Zeghidour.md)
+  - 02 [Alejandro Luebs](../../Authors/Alejandro_Luebs.md)
+  - 03 [Ahmed Omran](../../Authors/Ahmed_Omran.md)
+  - 04 [Jan Skoglund](../../Authors/Jan_Skoglund.md)
+  - 05 [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
 - 机构:
   - [Google Research](../../Institutions/Google.md) 
 - 时间:
