--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -815,7 +815,7 @@ class PosteriorEncoder(nn.Module):
 <summary>原文</summary>
 
 > The prior encoder consists of a text encoder that processes the input phonemes $c_{text}$ and a normalizing flow $f_{\theta}$ that improves the flexibility of the prior distribution.
-> The text encoder is a [transformer](../_Basis/2017.06.12_Transformer.md) encoder  that uses [relative positional representation](Self-Attention with Relative Position Representations) instead of absolute positional encoding.
+> The text encoder is a [transformer](../_Transformer/2017.06.12_Transformer.md) encoder  that uses [relative positional representation](Self-Attention with Relative Position Representations) instead of absolute positional encoding.
 > We can obtain the hidden representation $h_{text}$ from $c_{text}$ through the text encoder and a linear projection layer above the text encoder that produces the mean and variance used for constructing the prior distribution.
 
 </details>
