--- a/Models/Diffusion/2024.06.27_DEX-TTS.md
+++ b/Models/Diffusion/2024.06.27_DEX-TTS.md
@@ -106,7 +106,7 @@
 > Furthermore, we separate styles into time-invariant and time-variant styles to extract diverse styles even from expressive reference speech.
 > We design each time-invariant and time-variant encoder which utilizes multi-level feature maps and vector quantization, making well-refined styles.
 > Lastly, we propose time-invariant and time-variant adapters that incorporate each extracted style into the speech synthesis process.
-> For effective style reflection and high generalization capability, each method is based on Adaptive Instance Normalization (AdaIN) \cite{huang2017arbitrary} and cross-attention ([Transformer](../../Models/_Basis/2017.06.12_Transformer.md)) methods.
+> For effective style reflection and high generalization capability, each method is based on Adaptive Instance Normalization (AdaIN) \cite{huang2017arbitrary} and cross-attention ([Transformer](../_Transformer/2017.06.12_Transformer.md)) methods.
 > To effectively leverage the iterative denoising process of diffusion TTS, we design adapters that adaptively reflect styles over time.
 > Through the proposed methods, we can synthesize high-quality and reference-style speech. 
 
@@ -223,8 +223,8 @@ T-IV 风格包含全局信息, 而 T-V 风格包含随时间变化的信息, 如
 <summary>原文</summary>
 
 > Given the input phonemes, the text encoder extracts the text representation $h_{text}$.
-> The text encoder consists of 8 layers, each composed of [Transformer](../../Models/_Basis/2017.06.12_Transformer.md) encoder structure that includes Multi-Head Self-Attention (MHSA) and Feed-Forward Network (FFN).
-> To enhance the encoder, we incorporate relative position embedding, [RoPE](../_Basis/2021.04.20_RoFormer.md), into the attention mechanism and apply the swish gate used in [RetNet](../../Models/_Basis/2023.07.17_RetNet.md) after the attention operation.
+> The text encoder consists of 8 layers, each composed of [Transformer](../_Transformer/2017.06.12_Transformer.md) encoder structure that includes Multi-Head Self-Attention (MHSA) and Feed-Forward Network (FFN).
+> To enhance the encoder, we incorporate relative position embedding, [RoPE](../_Transformer/2021.04.20_RoFormer.md), into the attention mechanism and apply the swish gate used in [RetNet](../_Transformer/2023.07.17_RetNet.md) after the attention operation.
 > Since text varies over time, $h^{e}_{v}$, defined as T-V styles, can be effectively utilized to condition styles for $h_{text}$.
 > We utilize [Adaptive Layer Normalization (AdaLN)](../../Models/TTS2_Acoustic/2021.03.01_AdaSpeech.md) after each MHSA and FFN to inject $h^{e}_{v}$, extracted by the T-V encoder given a reference input, into $h_{text}$.
 > See Section \ref{sec:appendix-text encoder} for more details.
@@ -283,11 +283,24 @@ T-IV 风格包含全局信息, 而 T-V 风格包含随时间变化的信息, 如
 
 ### 3.3.Time-invariant Style Modeling
 
-> We model T-IV and T-V styles to extract well-represented styles from the reference speech. For T-IV styles, we design the encoder and adapter to process global information within the speech.
+<details>
+<summary>原文</summary>
+
+> We model T-IV and T-V styles to extract well-represented styles from the reference speech. 
+> For T-IV styles, we design the encoder and adapter to process global information within the speech.
+
+</details>
+<br>
+
+我们建模非时变和时变风格用于从参考语音中提取出良好表示的风格.
+对于非时变风格, 我们设计编码器和适配器来处理语音中的全局信息.
 
 #### T-IV Encoder
 
-> As depicted in Figure \ref{fig:dextts}.c, the T-IV encoder consists of a few residual convolution blocks to extract the representation from the reference speech. To maintain individual characteristics regardless of the temporal information within a batch, we utilize Instance Normalization (IN) after each block. Inspired by \cite{park2023triaan}, we use multi-level feature maps as T-IV styles $ h_{inv} \in \mathbb{R}^{L \times C \times T}$, where $L$ is the number of layers in the T-IV encoder. Since $h_{inv}$ comprises all stacked feature maps from the convolution block, it contains T-IV information across the convolution blocks.
+> As depicted in Figure.01.c, the T-IV encoder consists of a few residual convolution blocks to extract the representation from the reference speech. To maintain individual characteristics regardless of the temporal information within a batch, we utilize Instance Normalization (IN) after each block. Inspired by \cite{park2023triaan}, we use multi-level feature maps as T-IV styles $ h_{inv} \in \mathbb{R}^{L \times C \times T}$, where $L$ is the number of layers in the T-IV encoder. Since $h_{inv}$ comprises all stacked feature maps from the convolution block, it contains T-IV information across the convolution blocks.
+
+
+
 
 #### T-IV adapter
 
